--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,7 +1,9 @@
 @import 'colors';
 
 body {
-	background-image: linear-gradient( to bottom, $black, $darkBlue ); 
+	background-image: linear-gradient( to bottom, $black, black );
+	background-color: black;
+	background-repeat: no-repeat;
 }
 
 * {
@@ -16,4 +18,273 @@ img {
 	display: block;
 	width: 100%;
 	z-index: 20;
+}
+
+body {
+	background-color: $black;
+	text-align: center;
+	font-family: 'Abel', sans-serif;
+}
+
+.fade {
+	//opacity: 0;
+
+	-webkit-transition: opacity 3s; /* Safari */
+	transition: opacity 3s;
+}
+
+.background {
+	position: absolute;
+	min-width: 100%;
+	min-height: 100%;
+	top: 0px;
+	right: 0px;
+	background-color: black;
+	opacity: 0.80;
+	z-index: 2;
+}
+
+#date, #location {
+	font-size: 28pt;
+	color: $orange;
+	font-family: 'Abel', sans-serif;
+
+	font-weight: bold;
+	line-height: 1;
+	margin-bottom: 40px;
+}
+
+#login {
+    position: absolute;
+    top: 20%;
+    z-index: 300;
+}
+
+p {
+	font-size: 18pt;
+	color: $teal;
+	line-height: 0.7;
+	margin: 3px;
+}
+
+a {
+	color:  $teal;
+	text-align: left;
+	position: relative;
+	float: left;
+}
+
+.labeled-input {
+	position: relative;
+}
+
+.labeled-input > input {
+	margin-top: 26;
+}
+
+.labeled-input > label {
+	display: block;
+	position: absolute;
+	color: $lightBlue;
+	top: 32px;
+	text-align: center;
+	left: 0;
+	right: 0;
+	line-height: 1;
+	font-size: 1.2rem;
+	-webkit-transition: top 0.5s, font-size 0.5s; /* Safari */
+	transition: top 0.5s, font-size 0.5s;
+	z-index: 70;
+}
+.neon-input:focus + label, .neon-input:valid + label {
+	top: 0px;
+	font-size: 15px;
+
+}
+
+.neon-input:hover + label {
+	color: $teal;
+}
+
+
+.center-link {
+	position: relative;
+	display: inline-block;
+	float: none;;
+	text-align: center;
+}
+
+footer {
+	position: absolute;
+	margin: 20px auto;
+	width: 100%;
+	bottom:0;
+	left:0;
+}
+
+#media {
+	margin-left: 20px;
+	float: left;
+}
+
+#powered {
+	float: right;
+}
+
+#powered h4 {
+	color: $lightBlue;
+	font-size: 12pt;
+	display: inline-block;
+	float: left;
+}
+
+#hacksu {
+	display: inline-block;
+	height: 60px;
+	margin-right: 20px;
+}
+
+a {
+	text-decoration: none;
+	color:inherit;
+	z-index: 1;
+}
+
+#logo {
+	width: 50%;
+	margin: 8vh auto;
+}
+
+#waves {
+  	position: relative;
+  	margin: 20px auto 50px;
+	display: block;
+	width: 100%;
+	height: 20vh;
+	max-height: 200px;
+	z-index: 1;
+}
+
+#info {
+	position: relative;
+}
+
+.prompt {
+	position: absolute;
+	top: 35%;
+	right: 50%;
+	transform: translate(50%, -50%);
+	background: #111;
+	z-index: 50;
+	text-align: left;
+	border: 3px solid $pink;
+	border-radius: 5px;
+	box-shadow: 0px 0px 30px 0px rgba(210,28,90,1);
+	overflow: hidden;
+}
+
+.prompt > .title-bar {
+	position: relative;
+	width: inherit;
+	background-color: $teal;
+	height: 50px;
+	top: -3px;
+}
+
+.prompt > .content {
+	margin: 15px;
+	margin-top: 0px;
+}
+
+.title-bar > h1 {
+	padding-left: 10px;
+	margin: 0;
+	text-align: left;
+	min-width: 30px;
+	display: inline;
+	line-height: 50px;
+	color: white;
+}
+
+.title-bar > a {
+	position: relative;
+	float: right;
+	line-height: 50px;
+	padding-right: 10px;
+	color: white;
+}
+
+.error {
+	color: white;
+	padding-top: 15px;
+}
+
+.errors {
+	padding: 15px;
+	padding-top: 0;
+	background-color: gray;
+	width: inherit;
+}
+
+.btn {
+	z-index: 1;
+	position: relative;
+	border: 3px solid $lightBlue;
+	color: $lightBlue;
+	width: 246px;
+	display: block;
+	border-radius: 5px;
+  	padding: 15px 45px;
+  	margin: 15px auto 0 auto;
+  	font-size: 1.2rem;
+  	line-height: 1;
+  	text-transform: uppercase;
+  	text-align: center;
+  	cursor: hand;
+}
+
+.neon-input {
+	z-index: 1;
+	position: relative;
+	border: 3px solid $lightBlue;
+	background: transparent;
+	color: $teal !important;
+	width: 306px;
+	border-radius: 5px;
+	padding: 0px 15px 0px 15px;
+	margin: 15px auto 0 auto;
+	font-size: 1.2rem;
+	line-height: 1;
+	height: 50px;
+	z-index: 50;
+}
+
+.neon-input:hover, .neon-input:focus {
+	outline: none;
+	color:$teal;
+	border-color:$pink;
+}
+
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+	text-align: center;
+	padding-top: 3px;
+	color: $lightBlue;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+	text-align: center;
+	color: $lightBlue;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+	text-align: center;
+	color: $lightBlue;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+	text-align: center;
+	color: $lightBlue;
+}
+
+.btn:hover {
+	color: $teal ;
+	border-color: $pink;
 }
