--- a/sass/application.scss
+++ b/sass/application.scss
@@ -203,6 +203,7 @@
     background-color: $black;
     
     p {
+        color: rgba(white, 0.6);
         margin: 0.3rem 0;
     }
     
@@ -223,38 +224,39 @@
         position: relative;
         flex: 1 0 auto;
         background-color: $black;
-        border: 1px solid white;
+        border: 1px solid rgba(white, 0.6);
         border-top: none;
         border-bottom: none;
         border-style: inset;
         
         &:before {
             content: "";
-            display: block;
+            display: none;
             position: absolute;
             left: 25%;
             bottom: 0;
             width: 1px;
             height: 50%;
-            background-color: white;
+            background-color: rgba(white, 0.6);
         }
         
         &:after {
             content: "";
-            display: block;
+            display: none;
             position: absolute;
             right: 25%;
             bottom: 0;
             width: 25%;
             height: 50%;
             background-color: transparent;
-            border: 1px solid white;
+            border: 1px solid rgba(white, 0.6);
             border-style: inset;
             border-top: none;
             border-bottom: none;
         }
         
         p {
+            color: rgba(white, 0.6);;
             text-align: left;
             padding-left: 0.5rem;
         }
@@ -292,21 +294,33 @@
 #loop-selector {
     z-index: 300;
     position: fixed;
-    top: 35vh;
+    top: 10rem;
     left: 25vw;
     width: 50vw;
-    height: 50vh;
-    background-color: $black;
-    border: 1px solid black;
+    height: auto;
+    background-color: black;
+    border: 2px solid $black;
     border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: no-wrap;
+    
+    .flex-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+    }
+    
+    p {
+        width: 100%;
+        background-color: $black;
+        padding: 0.25rem 0;
+    }
     
     .loop {
         flex: 0 0 auto;
         width: 10vw;
         height: 10vw;
+        min-width: 120px;
+        min-height: 120px;
         color: white;
         margin: 40px 30px;
         background-color: rgba($pink, 0.7);
@@ -315,7 +329,9 @@
         
         h3 {
             color: white;
-            line-height: 30vh;
+            line-height: 10vw;
+            font-family: 'Abel', sans-serif;
+            margin: 0;
         }
         
     }
@@ -467,6 +483,10 @@
 }
 
 @media (min-width: 960px) {
+    
+    #application .measure:before, #application .measure:after {
+        display: block;
+    }
 
   #application header h1 {
     font-size: 2.5rem;
@@ -474,7 +494,6 @@
 
   #application header {
     height: 6rem;
-    margin-bottom: 1rem;
   }
 
   #application  .input {
