--- a/views/home.html
+++ b/views/home.html
@@ -38,7 +38,11 @@
 </div>
 
 <div class="home">
-  <img src="img/blue_logo.svg" class="fade center" id="logo">
+  <div class="row">
+    <div class="small-12 small-centered medium-10 columns">
+      <img src="img/blue_logo.svg" class="fade center" id="logo" alt="Kent Hack Enough">
+    </div>
+  </div>
   <canvas id="waves"></canvas>
   <div id="info center" class="fade">
 
@@ -54,29 +58,27 @@
   </div>
 
   <div class="info-section fade">
-    <div class="pure-g">
-      <div class="pure-u-1">
-        <div class="pure-u-1">
-         <h1>DESIGN. BUILD. PARTY.</h1>
-        </div>
-        <div class="pure-u-1">
-          <h3>ABOUT</h3>
-          <p>
-            Kent Hack Enough brings hackers from all over the nation together to learn something new, party hard, and create something awesome. With more than 250 highly motivated, creative, and talented participants, Kent Hack Enough is a weekend-long event where students from all areas of interest come together to make something awesome, like an app, website or hardware hack. The entire event is free for students, including food, energy drinks, and swag. In between all the coding, designing, and water pong, our sponsors are available as mentors to provide help and expertise throughout the hacking process.
-          </p>
-        </div>
-        <div class="pure-u-1 pure-u-lg-12-24" style="float:left">
-          <h3>ATTENDEES</h3>
-          <p>
-            Kent Hack Enough is free and open to students of all majors. If you are a high school student or a minor, please contact us for more information about how to attend. We’ll send you a waiver for your parents to sign and return before the event, and then you’ll be allowed in. If you’re traveling to Kent, please contact us for more information about travel reimbursement.
-          </p>
-        </div>
-        <div class="pure-u-1 pure-u-lg-12-24" style="float:left">
-          <h3>RULES</h3>
-          <p>
-            We require that all entries be created from scratch, during the competition. The use of 3rd party libraries and APIs is allowed and encouraged. Teams are limited to four people. To provide hackers with the best possible environment for learning, networking, and creating we adhere to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="white" target="_blank">MLH Code of Conduct</a>.
-          </p>
-        </div>
+    <div class="row">
+      <div class="small-12 columns">
+       <h1>DESIGN. BUILD. PARTY.</h1>
+      </div>
+      <div class="small-12 columns">
+        <h3>ABOUT</h3>
+        <p>
+          Kent Hack Enough brings hackers from all over the nation together to learn something new, party hard, and create something awesome. With more than 250 highly motivated, creative, and talented participants, Kent Hack Enough is a weekend-long event where students from all areas of interest come together to make something awesome, like an app, website or hardware hack. The entire event is free for students, including food, energy drinks, and swag. In between all the coding, designing, and water pong, our sponsors are available as mentors to provide help and expertise throughout the hacking process.
+        </p>
+      </div>
+      <div class="small-12 large-6 columns">
+        <h3>ATTENDEES</h3>
+        <p>
+          Kent Hack Enough is free and open to students of all majors. If you are a high school student or a minor, please contact us for more information about how to attend. We’ll send you a waiver for your parents to sign and return before the event, and then you’ll be allowed in. If you’re traveling to Kent, please contact us for more information about travel reimbursement.
+        </p>
+      </div>
+      <div class="small-12 large-6 columns">
+        <h3>RULES</h3>
+        <p>
+          We require that all entries be created from scratch, during the competition. The use of 3rd party libraries and APIs is allowed and encouraged. Teams are limited to four people. To provide hackers with the best possible environment for learning, networking, and creating we adhere to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="white" target="_blank">MLH Code of Conduct</a>.
+        </p>
       </div>
     </div>
   </div>
@@ -127,7 +129,13 @@
         requestAnimationFrame( animate );
         dt = dt + 1;
         if (!drawWave('#D21C5A', 9, 2, 0.62, true)) { //Check to see if the slowest wave (Pink) is done drawing
-
+          document.getElementById('logo').style.opacity = 1; //fade in logo
+          var fading_elements = document.getElementsByClassName('fade');
+          setTimeout( function(){ //Fade in everything else
+            for (var i = 0; i < fading_elements.length; ++i) {
+              fading_elements[i].style.opacity = '1';
+            }
+            },500);
         } else {
           drawWave('#4D7ABD', 10, 8, 0.25, true)//Blue
           drawWave('#F7961D', 11, 4, 0, true);//Orange
