--- a/views/404.html
+++ b/views/404.html
@@ -1,22 +1,21 @@
-<div class="dark-page">
-
-  <header>
-    <div class="row">
-      <div class="small-12 columns">
-        <h1><span class="red oswald">404</span> Page not found</h1>
-      </div>
-    </div>
-  </header>
-
+<header>
   <div class="row">
-    <div class="small-6 small-offset-3 medium-6 medium-offset-0 columns align-right">
-      <img src="/img/solo_cup.svg" alt="Solo Cup">
-    </div>
-    <div class="small-12 medium-6 columns">
-      <br><br><br>
-      <h1 class="white">Have you been drinking too much Red Bull? You're in the wrong place.</h1>
-      <h1 class=""><a href="/">Go home!</a></h1>
+    <div class="small-12 columns">
+      <h1><span class="red oswald">404</span> Page not found</h1>
     </div>
   </div>
+</header>
 
+<div class="row">
+<br/>
+<br/>
+<br/>
+
+</div>
+
+
+<div class="row">
+  <div class="small-12 medium-4 small-centered columns" style="text-align: left;">
+    <h1>Did you take a wrong turn on the way to the party?<a href="/">Homes is this way.</a></h1>
+  </div>
 </div>
