--- a/views/home.html
+++ b/views/home.html
@@ -91,7 +91,9 @@
   <footer>
     <div id='powered'>
       <h4>Powered by</h4>
-      <a href="http://hacksu.cs.kent.edu/"><img src="img/Hacksu_Color.svg" id="hacksu"></a>
+      <a href="http://hacksu.cs.kent.edu/" target="_blank"3><img src="img/Hacksu_Color.svg" id="hacksu"></a>
+      <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
+
     </div>
   </footer>
 
