--- a/views/home.html
+++ b/views/home.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <canvas id="waves"></canvas>
-  <div id="info-center" class="fade">
+  <div class="text-center" class="fade">
 
     <h2 id="date">October 7-9th, 2016</h2>
     <h2 id="location">Kent State University Library</h2>
@@ -88,14 +88,116 @@
     </div>
   </div>
 
-  <footer>
-    <div id='powered'>
-      <h4>Powered by</h4>
-      <a href="http://hacksu.cs.kent.edu/" target="_blank"3><img src="img/Hacksu_Color.svg" id="hacksu"></a>
-      <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
-
+  <div class="light-section fade" id="sponsors">
+    <div class="row">
+      <div class="small-12 columns">
+        <div class="row">
+          <div class="small-12 columns">
+            <h2>SPONSORS</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-12 columns">
+            <br>
+            <p>
+              Interested in sponsoring KHE 2015? Take a look at our
+              <a target="_blank" href="/SponsorshipPacket.pdf">sponsorship packet</a>
+              and <a href="mailto:staff@khe.io">contact us</a> (staff@khe.io).
+            </p>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="http://knightfoundation.org/"> <img src="/img/sponsors/knight-foundation.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="http://www.smuckers.com/"> <img src="/img/sponsors/smuckers.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="https://hurricanelabs.com/"> <img src="/img/sponsors/hurricane.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg"/> </a>
+          </div>
+          <div class="small-4 columns text-center end">
+            <a href="http://www.oeconnection.com/"> <img src="/img/sponsors/OEC.png" /> </a>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="https://www.mobiledefense.com/"> <img src="/img/sponsors/mobiledefense.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center end">
+            <a href="https://www.kent.edu/blackstonelaunchpad"> <img src="/img/sponsors/blackstone.svg"/> </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-12 columns">
+            <br><br>
+            <h2 class="text-center">SUPPORTERS</h2>
+            <br>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+          <div class="small-4 columns text-center">
+            <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
+            <a href="http://www.library.kent.edu/"> <img src="/img/sponsors/university-library.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center end">
+            <a href="https://www.kent.edu/cs"> <img src="/img/sponsors/cs.png"/> </a>
+          </div>
+        </div>
+      </div>
     </div>
-  </footer>
+    <div class="footer row">
+      <div id='powered'>
+        <h4>Powered by</h4>
+        <a href="http://hacksu.cs.kent.edu/" target="_blank"3><img src="img/Hacksu_Color.svg" id="hacksu"></a>
+        <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
+
+      </div>
+    </div>
+  </div>
 
 </div>
   <script type="text/javascript">
