--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -2,6 +2,34 @@
 $lightBlue: #4D7ABD;
 $darkBlue: #2B3F66;
 $teal: #5AC2AE;
-$orange: #F7961D; 
+$orange: #F7961D;
 $pink: #D21C5A;
 $black: #111;
+
+.lightBlue {
+  color: #4D7ABD;
+}
+
+.darkBlue {
+  color: #2B3F66;
+}
+
+.teal {
+  color: #5AC2AE;
+}
+
+.orange {
+  color: #F7961D;
+}
+
+.pink {
+  color: #D21C5A;
+}
+
+.black {
+  color: #111;
+}
+
+.white {
+  color: #FFF;
+}
