--- a/sass/app.scss
+++ b/sass/app.scss
@@ -141,14 +141,11 @@ footer {
 }
 
 #powered img {
-	fill: white;
-}
-
-#hacksu, #mlh-logo {
 	display: inline-block;
 	height: 60px;
-	margin-right: 20px;
-}
+	margin-right: 20px;}
+
+
 
 #mlh-logo {
 	position: relative;
