--- a/views/404.html
+++ b/views/404.html
@@ -1,7 +1,7 @@
 <header>
   <div class="row">
     <div class="small-12 columns">
-      <h1><span class="red oswald">404</span> Page not found</h1>
+      <h1 class="text-center white"><span class="orange oswald">404</span> Page not found</h1>
     </div>
   </div>
 </header>
@@ -10,12 +10,14 @@
 <br/>
 <br/>
 <br/>
-
+<br/>
+<br/>
+<br/>
 </div>
 
 
 <div class="row">
-  <div class="small-12 medium-4 small-centered columns" style="text-align: left;">
-    <h1>Did you take a wrong turn on the way to the party?<a href="/">Homes is this way.</a></h1>
+  <div class="small-12 medium-6 small-centered columns">
+    <h1 class="white">Did you take a wrong turn on the way to the party? <a href="/">Homes is this way.</a></h1>
   </div>
 </div>
