--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -2,6 +2,8 @@
 $lightBlue: #4D7ABD;
 $darkBlue: #2B3F66;
 $teal: #5AC2AE;
-$orange: #F7961D; 
+$orange: #F7961D;
 $pink: #D21C5A;
 $black: #111;
+
+$color-list: "lightBlue", "darkBlue", "teal", "orange", "pink", "black";
