--- a/views/home.html
+++ b/views/home.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <canvas id="waves"></canvas>
-  <div class="text-center" class="fade">
+  <div class="text-center fade">
 
     <h2 id="date">October 7-9th, 2016</h2>
     <h2 id="location">Kent State University Library</h2>
