--- a/sass/app.scss
+++ b/sass/app.scss
@@ -76,7 +76,7 @@ a {
 	display: block;
 	position: absolute;
 	color: $lightBlue;
-	top: 32px;
+	top: 52px;
 	text-align: center;
 	left: 0;
 	right: 0;
@@ -87,9 +87,7 @@ a {
 	z-index: 70;
 }
 .neon-input:focus + label, .neon-input:valid + label {
-	top: 0px;
-	font-size: 15px;
-
+	top: 9px;
 }
 
 .neon-input:hover + label {
@@ -201,8 +199,17 @@ a {
 }
 
 .prompt > .content {
-	margin: 15px;
-	margin-top: 0px;
+	margin: 20px;
+	margin-top: 0;
+}
+
+.content  .btn {
+	margin-top: 35px;
+}
+
+.content input {
+	margin-top: 35px;
+	margin-bottom: 0px;
 }
 
 .title-bar > h1 {
@@ -259,12 +266,12 @@ a {
 	z-index: 1 !important;
 	position: relative !important;
 	border: 3px solid $lightBlue !important;
-	background: transparent !important;
-	color: $teal !important;
+	background: rgb(250, 250, 250) !important;
+	color: $black !important;
 	width: 306px !important;
 	border-radius: 5px !important;
 	padding: 0px 15px 0px 15px !important;
-	margin: 15px auto 0 auto !important;
+	margin: 15px auto 0 auto;
 	font-size: 1.2rem !important;
 	line-height: 1 !important;
 	height: 50px !important;
@@ -277,7 +284,6 @@ a {
 
 .neon-input:hover, .neon-input:focus {
 	outline: none !important;
-	color:$teal !important;
 	border-color:$pink!important;
 }
 
