--- a/views/404.html
+++ b/views/404.html
@@ -18,6 +18,6 @@
 
 <div class="row">
   <div class="small-12 medium-6 small-centered columns">
-    <h1 class="white">Did you take a wrong turn on the way to the party? <a href="/">Homes is this way.</a></h1>
+    <h1 class="white">Did you take a wrong turn on the way to the party? <a href="/">Home is this way.</a></h1>
   </div>
 </div>
